tests/baselines/reference/privateStaticNotAccessibleInClodule2.errors.txt
privateStaticNotAccessibleInClodule2.ts(12,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
privateStaticNotAccessibleInClodule2.ts(13,22): error TS2341: Property 'bar' is private and only accessible within class 'C'.


==== privateStaticNotAccessibleInClodule2.ts (2 errors) ====
    // Any attempt to access a private property member outside the class body that contains its declaration results in a compile-time error.
    
    class C {
        private foo: string;
        private static bar: string;
    }
    
    class D extends C {
        baz: number;   
    }
    
    module D {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export var y = D.bar; // error
                         ~~~
!!! error TS2341: Property 'bar' is private and only accessible within class 'C'.
    }